fixed invisible leader card...

--- a/src/styles/Leaderboard.scss
+++ b/src/styles/Leaderboard.scss
@@ -65,8 +65,7 @@
         .leader-card {
             max-width: 814.5px;
             height: 40px;
-            border-radius: 5px;
-            opacity: 0px;            
+            border-radius: 5px;        
             display: flex;
             align-items: center;
             gap: 16px;
